istio/envoyfilter-websocket.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: websocket-upgrade
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
      patch:
        operation: MERGE
        value:
          route:
            upgrade_configs:
              - upgrade_type: websocket
